We don't properly propagate non-simple-parameter-list when parsing a setter https://bugs.webkit.org/show_bug.cgi?id=160483

Reviewed by Joseph Pecoraro.

JSTests:

* test262.yaml:

Source/JavaScriptCore:

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFunctionParameters):

LayoutTests:

* js/parser-syntax-check-expected.txt:
* js/script-tests/parser-syntax-check.js:



Canonical link: https://commits.webkit.org/180672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206590 268f45cc-cd09-0410-ab3c-d52691b4dbfc